# homeassistant

./: Cargo.toml  Dockerfile  README.md  compose.yml
.cargo/: config.toml
.github/workflows/: build.yml
examples/: docker-compose.basic.yml  docker-compose.bluetooth.yml  docker-compose.zigbee.yml
lxc/: homeassistant.conf.example  provision.sh
scripts/: backup.sh  configure.sh  entrypoint.sh  install.sh  restore.sh
src/: abi_export.rs  lib.rs  lifecycle.rs  tools.rs
tests/: integration.rs
